@@ -1,5 +1,8 @@
 2007-07-16  Peter Williams  <peter@newton.cx>
 
+	* omega/util.py (makeQuickRectDataPainter): Allow the caller to specify
+	a desired point stamp.
+
 	* omega/stamps.py (Box.doPaint): Make stamps bigger by default; collect
 	the default value of the size parameter in one variable.
 	
